# samml_fpga

hw/: Makefile  README.rst  description.json  details.rst  krnl_unary.cfg  makefile_us_alveo.mk  qor.json  samml_xrt  utils.mk  xrt.ini
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/: mem_read.xo  mem_read.xo.compile_summary  mem_write.xo  mem_write.xo.compile_summary  unary.xo  unary.xo.compile_summary  v++_compile_mem_read_guidance.pb3  v++_compile_mem_write_guidance.pb3  v++_compile_unary_guidance.pb3  v++_link_krnl_unary.link_guidance.pb3
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/link/: link.spr
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/link/int/: krnl_unary.link_build.rtd  syslinkConfig.ini  vplConfig.ini  vplsettings.json  xclbin_orig.xml
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/link/run_link/: gen_run.xml  htr.txt
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/link/sys_link/: hw_emu.hpfm
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/logs/: optraceViewer.html
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/mem_read/: mem_read.spr
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/mem_read/mem_read/: htr.txt  (+6 more)
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/mem_write/: mem_write.spr
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/unary/: unary.spr
hw/_x.hw_emu.xilinx_aws-vu47p-f2_202410_1/unary/unary/unary/solution/impl/misc/drivers/unary_v1_0/src/: CMakeLists.txt  xunary.h  xunary_hw.h
hw/build_dir.hw_emu.xilinx_aws-vu47p-f2_202410_1/: krnl_unary.link.xclbin.link_summary
hw/src/: Intersecter.cpp  alu.cpp  common.h  host.cpp  samml_runner.cpp  unary.cpp  unioner.cpp  util.h  vadd.cpp
(+731 files in other folders)
